fixed table overflow

--- a/static/genedive/view/table/table.css
+++ b/static/genedive/view/table/table.css
@@ -1,5 +1,9 @@
 /* TABLE */
 
+.table-view .table {
+  table-layout: fixed;
+}
+
 .table-view .table tr.grouped {
   cursor:pointer;
 }
